--- a/naveen.html
+++ b/naveen.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hi I'm Naveenkumar</h1>
+    <h1>Hi I'm Naveenkumar.</h1>
   </body>
 </html>
