added section tag

--- a/arun-sreemadasu.html
+++ b/arun-sreemadasu.html
@@ -9,5 +9,6 @@
   <body>
     <h1>i'm front-end developer</h1>
     <p>this is for testing purpose</p>
+    <section>hello world</section>
   </body>
 </html>
